# clippy

./: .editorconfig  CONTRIBUTING.md  Cargo.toml  README.md  cargo.toml  check.sh  rustfmt.toml
.cargo/: config.toml
.github/: CONTRIBUTING.md  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check.yml  renovate.yml
app/: Cargo.toml  cargo
app/benches/: remove_duplicates.rs
app/data/: config.toml
app/data/words/: adj_verbs.txt
app/src/: cli.rs  error.rs  lib.rs  main.rs  prelude.rs
app/src/commands/: completions.rs  copy.rs  list.rs  mod.rs  recall.rs  remove.rs  search.rs  store.rs  version.rs  watch.rs  wipe.rs
app/src/commands/pair/: adj_verb.txt  adverb.txt  mod.rs  noun.txt  pair.rs
app/src/database/: mod.rs  schema.rs
app/src/utils/: database.rs  detection.rs  formatting.rs  mod.rs  utils.rs
app/src/utils/database/: clip.rs  mod.rs  schema.rs
benches/: remove_duplicates.rs
completion/: Cargo.toml
daemon/: Cargo.toml
daemon/database/: mod.rs
daemon/src/: lib.rs  main.rs  prelude.rs
daemon/src/database/: clipboard.rs  mod.rs  node.rs  schema.rs  testing.rs
daemon/src/sync/: connection.rs  mod.rs  node_manager.rs  utils.rs
daemon/src/utils/: async_helpers.rs  clipboard.rs  config.rs  dirs.rs  ip.rs  mod.rs  sysinfo.rs  utils.rs
src/: cli.rs  clip.rs  error.rs  main.rs
src/commands/: completions.rs  list.rs  mod.rs  recall.rs  remove.rs  search.rs  store.rs  version.rs  wipe.rs
src/utils/: database.rs  formatting.rs  mod.rs  text.rs  utils.rs
xtask/: Cargo.toml  clippy.man
xtask/src/: main.rs
