[package]
name = "clippy"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = "1.1.9"
chrono = { version = "0.4.38", features = [
	"serde",
	"std",
	"clock",
	"arbitrary",
] }
clap = { version = "4.5.20", features = ["derive", "string"] }
dirs = "5.0.1"
itertools = "0.13.0"
jammdb = "0.11.0"
log = "0.4.22"
redb = "2.1.4"
serde = { version = "1.0.213", features = ["derive"] }
