[package]
name = "clippy"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = "1.1.9"
chrono = { version = "0.4.38", features = ["now", "clock", "serde"] }
clap = { version = "4.5.20", features = [
    "derive",
    "string",
    "wrap_help",
    "env",
] }
clap_complete = "4.5.37"
clap_mangen = "0.2.24"
derive_more = { version = "1.0.0", features = [
    "display",
    "from",
    "add",
] }
dirs = "5.0.1"
itertools = "0.13.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
redb = "2.1.4"
serde = { version = "1.0.214", features = ["derive", "serde_derive"] }
thiserror = "1.0.65"
tracing = "0.1.40"

[dev-dependencies]
tempfile = "3.14.0"
mockall = "0.13.0"
anyhow = "1.0.91"
fake = "2.10.0"
camino = "1.1.9"
