[package]
name = "clippy"
authors = ["Justin Bacher <92jbach@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/JustinBacher/clippy"
homepage = "https://github.com/JustinBacher/clippy"
license = "MIT"
publish = false

[dependencies]
camino = "1"
chrono = "0.4"
clap = { version = "4.5", features = [
    "cargo",
    "derive",
    "string",
    "wrap_help",
    "env",
] }
clap_complete = "4.5"
derive_more = { version = "1", features = [ "display", "from", "add"] }
dirs = "5"
image = "0.25"
impl-trait-for-tuples = "0.2.2"
itertools = "0.13"
log = "0.4"
pretty_env_logger = "0.5"
rand = "0.8"
redb = "2"
scopeguard = "1"
serde = { version = "1.0", features = ["derive", "serde_derive"] }
size = "0.4.1"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.13"
pretty_assertions = "1"
rand = "0.8"
tempfile = "3.14"
trycmd = "0.15"
gnuplot = "0.0.44"

[[bench]]
name = "remove_duplicates"
harness = false

