[package]
name = "clippy"
authors = ["Justin Bacher <92jbach@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/JustinBacher/clippy"
homepage = "https://github.com/JustinBacher/clippy"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.93"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bincode_derive = "2.0.0-rc.3"
camino = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["cargo", "derive", "string", "env"] }
clap_complete = "4.5"
clippy_daemon = { path = "../daemon/" }
derive_more = { version = "1.0.0", features = ["display"] }
dirs = "5"
image = "0.25"
itertools = "0.13"
log = "0.4"
native_db = "0.8.1"
native_model = "0.4.20"
once_cell = "1.20.2"
rand = "0.8"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive", "serde_derive"] }
size = "0.4.1"
strum = { version = "0.26.3", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.13"
pretty_assertions = "1"
rand = "0.8"
shortcut_assert_fs = "0.1.0"
trycmd = "0.15"
gnuplot = "0.0.44"

[[bench]]
name = "remove_duplicates"
harness = false
