[package]
name = "clippy"
authors = ["Justin Bacher <92jbach@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/JustinBacher/clippy"
homepage = "https://github.com/JustinBacher/clippy"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.93"
arboard = { version = "3.4.1", features = [
    "wayland-data-control",
    "wl-clipboard-rs",
] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bincode_derive = "2.0.0-rc.3"
camino = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["cargo", "derive", "string", "env"] }
clap_complete = "4.5"
clippy_daemon = { path = "../daemon/" }
derive_more = { version = "1.0.0", features = ["display"] }
directories = "5.0.1"
dirs = "5"
futures = "0.3.31"
image = "0.25"
itertools = "0.13"
local-ip-address = "0.6.3"
log = "0.4"
mdns = "3.0.0"
native_db = "0.8.1"
native_model = "0.4.20"
once_cell = "1.20.2"
promkit = "0.5.0"
rand = { version = "0.8", features = ["alloc"] }
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0.133"
size = "0.4.1"
spinner = "0.5.0"
spinners = "4.1.1"
strum = { version = "0.26.3", features = ["derive"] }
tokio = "1.42.0"
tracing = "0.1"
winapi = "0.3.9"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.13"
pretty_assertions = "1"
rand = "0.8"
shortcut_assert_fs = "0.1.0"
trycmd = "0.15"
gnuplot = "0.0.44"

[[bench]]
name = "remove_duplicates"
harness = false

[build]
rustflags = ["--cfg", "debug_env"]
