[package]
name = "clippy-completions"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = [
    "derive",
    "string",
    "wrap_help",
    "env",
] }
clap_generate = "3.0.3"
clap_mangen = "0.2.24"
thiserror = "1.0.65"

[dev-dependencies]
anyhow = "1.0.91"
fake = "2.10.0"
