[package]
name = "clippy-dameon"
authors = ["Justin Bacher <92jbach@gmail.com>"]
edition = "2021"
repository = "https://github.com/JustinBacher/clippy"
homepage = "https://github.com/JustinBacher/clippy"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.93"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bincode_derive = "2.0.0-rc.3"
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["display"] }
dirs = "5"
async-stream = "0.3.6"
clippy = { path = "../app/" }
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
image = "0.25"
itertools = "0.13"
log = "0.4"
native_db = "0.8.1"
native_model = "0.4.20"
once_cell = "1.20.2"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive", "serde_derive"] }
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.41.1", features = ["io-std", "macros", "time"] }
tracing = "0.1"
wl-clipboard-rs = "0.9.1"
x11-clipboard = "0.9.3"
x11rb = "0.13.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.58.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21.0"
zbus = "5.1.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.13"
pretty_assertions = "1"
rand = "0.8"
shortcut_assert_fs = "0.1.0"
trycmd = "0.15"
gnuplot = "0.0.44"
