[package]
name = "clippy_daemon"
authors = ["Justin Bacher <92jbach@gmail.com>"]
edition = "2021"
repository = "https://github.com/JustinBacher/clippy"
homepage = "https://github.com/JustinBacher/clippy"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.93"
arboard = { version = "3.4.1", features = [
    "wayland-data-control",
    "wl-clipboard-rs",
] }
async-gen = "0.2.3"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bincode_derive = "2.0.0-rc.3"
camino = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["display"] }
dirs = "5"
futures = "0.3.31"
futures-core = "0.3.31"
genawaiter = { version = "0.99.1", features = ["futures03"] }
image = "0.25"
itertools = "0.13"
log = "0.4"
native_db = "0.8.1"
native_model = "0.4.20"
notify = "7.0.0"
once_cell = "1.20.2"
promkit = "0.5.0"
rand = "0.8"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive", "serde_derive"] }
shortcut_assert_fs = "0.1.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
tokio-test = "0.4.4"
toml = "0.8.19"
tracing = "0.1"
x-win = { version = "2.0.2", features = ["x11"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.13"
pretty_assertions = "1"
rand = "0.8"
shortcut_assert_fs = "0.1.0"
trycmd = "0.15"
gnuplot = "0.0.44"
